CustomObjects/objects/invoiceit_s__Mid_Term_Adjustment__c.object
<CustomObject>
    <fields>
        <fullName>invoiceit_s__Adjustment_requested_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjustment requested by</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mid-Term Adjustments</relationshipLabel>
        <relationshipName>Mid_Term_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Order__c</fullName>
        <label>Order</label>
        <referenceTo>invoiceit_s__Job__c</referenceTo>
        <relationshipLabel>Mid-Term Adjustments</relationshipLabel>
        <relationshipName>Mid_Term_Adjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Version__c</fullName>
        <label>Version</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Mid-Term Adjustment</label>
    <nameField>
        <label>Mid-Term Adjustments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mid-Term Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>